<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cloud.tao.ui.widget.TitleBar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            android:background="@color/colorPrimary"
            app:title_left_icon_visible="true"
            app:title_left_icon_src="@mipmap/ic_back"
            app:title_right_visible="true"
            app:title_right_text="完成"
            app:title_text="绑定手机号"
            app:title_text_color="@android:color/white"
            />

        <EditText
            style="@style/EditText.White"
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:hint="@string/input_your_phone_tip"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h_4"
            >

            <EditText
                style="@style/EditText.White"
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/input_msg_code_tip"
                />

            <TextView
                style="@style/TextView.14sp_Common.Bg"
                android:layout_width="@dimen/w_90"
                android:id="@+id/tv_code"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/global_padding"
                android:text="@string/get_msg_code"
                />
        </RelativeLayout>
    </LinearLayout>
</layout>