<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gary_bg"
        >

        <com.cloud.tao.ui.widget.TitleBar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            android:layout_alignParentTop="true"
            android:background="@color/nag_bg"
            app:title_left_icon_src="@mipmap/ic_chevron_left"
            app:title_left_icon_visible="true"
            app:title_right_visible="true"
            app:title_text="个人资料"
            app:title_text_color="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >





                    <LinearLayout
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>

                        <RelativeLayout
                            android:layout_marginLeft="@dimen/w_20"
                            android:layout_marginRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_username"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_username"
                                />
                            <EditText
                                android:id="@+id/et_username"
                                android:layout_marginLeft="@dimen/w_5"
                                android:textColorHint="#EAEAEA"
                                style="@style/personInfoEdit"
                                android:layout_toRightOf="@+id/tv_username"
                                android:hint="@string/person_info_et_username_hint"
                                android:layout_centerVertical="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>



                        <RelativeLayout
                            android:layout_marginLeft="@dimen/w_20"
                            android:layout_marginRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_phone_number"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_phone_number"
                                />
                            <EditText
                                android:id="@+id/et_phone_number"
                                android:layout_marginLeft="@dimen/w_5"
                                android:textColorHint="#EAEAEA"
                                style="@style/personInfoEdit"
                                android:layout_toRightOf="@+id/tv_phone_number"
                                android:hint="@string/person_info_et_phone_number_hint"
                                android:layout_centerVertical="true"
                                android:inputType="number"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>



                        <RelativeLayout
                            android:layout_marginLeft="@dimen/w_20"
                            android:layout_marginRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_sex"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_sex"
                                />
                            <RadioGroup
                                android:layout_toRightOf="@id/tv_sex"
                                android:layout_marginLeft="@dimen/w_5"
                                android:layout_centerVertical="true"
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <RadioButton
                                    android:id="@+id/rb_man"
                                    android:layout_marginLeft="@dimen/w_10"
                                    android:layout_centerVertical="true"
                                    android:background="@drawable/rbtn_sex_selector"
                                    android:button="@null"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:layout_marginLeft="@dimen/w_5"
                                    android:text="@string/person_info_tv_sex_man"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />



                                <RadioButton
                                    android:id="@+id/rb_wowan"
                                    android:layout_marginLeft="@dimen/w_40"
                                    android:layout_centerVertical="true"
                                    android:background="@drawable/rbtn_sex_selector"
                                    android:button="@null"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                                <TextView
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="@dimen/w_5"
                                    android:text="@string/person_info_tv_sex_woman"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </RadioGroup>



                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>



                        <RelativeLayout
                            android:id="@+id/rl_birthday"
                            android:background="@drawable/bg_base_selector"
                            android:paddingLeft="@dimen/w_20"
                            android:paddingRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_birthday"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_birthday"
                                />


                            <TextView
                                android:id="@+id/tv_select_birthday"
                                android:layout_marginLeft="@dimen/w_5"
                                style="@style/personInfoEdit"
                                android:layout_toRightOf="@+id/tv_birthday"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:src="@mipmap/ic_arrow_right"
                                android:layout_height="match_parent" />




                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>



                        <RelativeLayout
                            android:id="@+id/rl_city"
                            android:background="@drawable/bg_base_selector"
                            android:paddingLeft="@dimen/w_20"
                            android:paddingRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_city"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_city"
                                />

                            <TextView
                                android:id="@+id/tv_select_city"
                                android:layout_marginLeft="@dimen/w_5"
                                style="@style/personInfoEdit"
                                android:layout_toRightOf="@+id/tv_city"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:src="@mipmap/ic_arrow_right"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>


                        <RelativeLayout
                            android:layout_marginLeft="@dimen/w_20"
                            android:layout_marginRight="@dimen/w_20"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_50">
                            <TextView
                                android:id="@+id/tv_weixin"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/personInfoText"
                                android:text="@string/person_info_tv_weixin"
                                />

                            <EditText
                                android:id="@+id/et_weixin"
                                android:layout_marginLeft="@dimen/w_5"
                                android:textColorHint="#EAEAEA"
                                style="@style/personInfoEdit"
                                android:layout_toRightOf="@+id/tv_weixin"
                                android:hint="@string/person_info_et_weixin_hint"
                                android:layout_centerVertical="true"
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                        <View
                            android:background="@color/gray_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h_0.5"/>




                    </LinearLayout>





                </LinearLayout>
            <com.cloud.tao.ui.widget.LoadTipLayout
                android:id="@+id/loadding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tip_loadding_text="正在提交..."
                android:background="#66000000"
                app:tip_loadding_src="@mipmap/ic_loading"
                />

            <View
                android:id="@+id/vMasker"
                android:visibility="gone"
                android:background="#e0000000"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>


            <Button
                android:id="@+id/bt_person_update"
                android:background="@drawable/selector_square_bt"
                android:textColor="@color/white"
                android:textSize="@dimen/f16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_50"
                android:text="保存修改"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </LinearLayout>
</layout>